@@ -76,7 +76,7 @@ namespace dgm {
 			 */
 			virtual void update(const dgm::Time &time) =0;
 
-			ParticleSystemInterface() {}
+			ParticleSystemInterface() = default;
 			ParticleSystemInterface(ParticleSystemInterface& other) = delete;
 			ParticleSystemInterface(ParticleSystemInterface&& other) = default;
 			virtual ~ParticleSystemInterface();
